cluster/apps/flux-system/flux-addons/receiver/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-receiver
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN:=domain}"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    hajimari.io/enable: "false"
    gatus.io/enabled: "true"
    gatus.io/endpoint: |
      group: external
      guarded: true
      conditions:
        - "[STATUS] == 404"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - &host "flux-receiver.${SECRET_DOMAIN}"
      secretName: "wildcard-${SECRET_DOMAIN/./-}-tls"
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
