cluster/apps/flux-system/flux-addons/receiver/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-receiver
  namespace: flux-system
  annotations:
    gatus.io/enabled: "true"
    gatus.io/endpoint: |
      group: external
      conditions:
        - "[STATUS] == 404"
spec:
  parentRefs:
    - name: external-gateway
      namespace: networking
  hostnames:
    - "flux-receiver.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webhook-receiver
          port: 80
